tests/parse_errors/malformed_cond02.bkl
<?xml version="1.0" ?>
<makefile>
    <set var="FOO">
        <if cond="XX!='1'">x</if>
    </set>
</makefile>
